Disable prefetching on ContentSuggestions

Prefetching allows the collection view to get cells configured by the
item before it is visible. The item will not reconfigure the cell for
this display.
If the CollectionViewController tries to reconfigure the items
associated with this cell in the moment between the prefetching and
the time the cell is visible, the reconfigure will do nothing.

In ContentSuggestions this problem was encounter for the display of
the articles' images.

Bug: 740572
Change-Id: I99c1bd2a95159d22512494961b3fb1ad935ad998
Reviewed-on: https://chromium-review.googlesource.com/567924
Reviewed-by: Elodie Banel <lod@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485933}