ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.mm
@@ -71,6 +71,7 @@ BOOL ShouldCellsBeFullWidth(UITraitCollection* collection) {
   if (self) {
     _collectionUpdater = [[ContentSuggestionsCollectionUpdater alloc]
         initWithDataSource:dataSource];
+    self.collectionView.prefetchingEnabled = NO;
   }
   return self;
 }
